# saia_python

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  quality.yml  tests.yml
docs/: CHANGELOG.md  arcana_incremental_sync.rst  architecture.rst  conf.py  configuration.rst  dev_notes.rst  development.rst  explanations.rst  extensions.rst  implementation.rst  index.rst  quickstart.rst  roadmap.rst  testing.rst
docs/_templates/: package-version.html
docs/adr/: 0000-record-architecture-decisions.md  0001-openai-as-an-optional-extra.md  0002-rate-limit-metadata-on-responses.md  0003-pyproject-single-source-of-dependency-truth.md  0004-non-blocking-operations-via-futures.md  0005-arcana-reference-parsing-in-the-core.md  0006-transport-policy-rate-limit-handling.md  index.md
docs/api/: arcana.rst  arcana_references.rst  auth.rst  chat.rst  client.rst  documents.rst  exceptions.rst  functional.rst  index.rst  models.rst  openai_compat.rst  rate_limits.rst  responses.rst  voice.rst
docs/proposals/: batch-executor-unification.md  rate-limit-handling.md
examples/: .env.example  arcana_frontmatter_repro.ipynb  arcana_frontmatter_repro.py  arcana_frontmatter_response_openai_sdk.json  arcana_frontmatter_response_plain_http.json  config.toml.example  openai_compatible_proxy.ipynb  saia_python_demo.ipynb
saia_python/: __init__.py  _http.py  _streaming.py  _util.py  arcana.py  arcana_references.py  auth.py  chat.py  client.py  documents.py  exceptions.py  models.py  openai_compat.py  rate_limits.py  responses.py  voice.py
tests/: test_arcana.py  test_arcana_references.py  test_auth.py  test_chat.py  test_client.py  test_documents.py  test_exceptions.py  test_health_check.py  test_models.py  test_openai_compat.py  test_rate_limits.py  test_responses.py  test_setup_from_directory.py  test_streaming.py  test_transport_policy.py  test_voice.py
