[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saia-python"
version = "0.4.1"
description = "Python wrapper for the GWDG SAIA platform REST API"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    {name = "Friedrich Schwarz"},
]
keywords = [
    "GWDG",
    "SAIA",
    "ARCANA",
    "RAG",
    "LLM",
    "OpenAI",
    "academic-cloud",
    "whisper",
    "AI",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28",
    "tqdm>=4.60",
    "tomlkit>=0.12",
]

[project.urls]
Homepage = "https://github.com/fschwar4/saia_python"
Documentation = "https://fschwar4.github.io/saia_python/"
Repository = "https://github.com/fschwar4/saia_python"
Changelog = "https://github.com/fschwar4/saia_python/blob/main/docs/CHANGELOG.md"
Issues = "https://github.com/fschwar4/saia_python/issues"

[tool.setuptools.packages.find]
include = ["saia_python*"]

[tool.setuptools.package-data]
saia_python = ["py.typed"]

[project.optional-dependencies]
openai = [
    "openai>=1.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "saia-python[openai]",
]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.15",
    "sphinx-design",
    "sphinx-copybutton",
    "myst-parser",
]
lint = [
    "ruff>=0.6",
    "mypy>=1.10",
    "types-requests",
]
dev = [
    "saia-python[test,docs,lint]",
    "jupyter",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line length is managed by the formatter; long strings/URLs allowed

[tool.ruff.lint.per-file-ignores]
"tests/test_openai_compat.py" = ["E402"]  # import deliberately follows pytest.importorskip

[tool.mypy]
python_version = "3.10"
files = ["saia_python"]
ignore_missing_imports = true  # tqdm / openai / tomlkit ship partial or no stubs
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# tomlkit's container accessors are typed `Item | Container`, which mypy cannot
# narrow for our config read/write helpers. Tracked for a future typing pass.
module = "saia_python.auth"
disable_error_code = ["index", "operator", "union-attr", "call-arg"]

[[tool.mypy.overrides]]
# `ModelsService.list` / `ArcanaService.list` shadow the builtin `list`, so
# `list[...]` annotations inside these classes resolve to the method rather than
# the type. Renaming would break the public API; scoped out until the
# annotations are qualified (e.g. `builtins.list`).
module = ["saia_python.models", "saia_python.arcana"]
disable_error_code = ["valid-type"]
